content/terraform-tfctl-cli/v0.3.x/docs/tfctl-cli/reference/cli/index.mdx
---
page_title: CLI Reference
description: |-
  Complete reference documentation for all tfctl CLI commands, including authentication, run management, and API operations.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-07-30T22:07:35.000Z
last_modified: 2026-07-30T22:07:35.000Z
# END AUTO GENERATED METADATA
---

# CLI Command Reference

This page provides an overview of all tfctl CLI commands. Each command includes detailed reference documentation with usage examples, options, and flags.

## Command Categories

### Authentication

- [`tfctl auth`](/terraform/tfctl-cli/reference/cli/auth) - Manage authentication with HCP Terraform
  - [`tfctl auth login`](/terraform/tfctl-cli/reference/cli/auth/login) - Authenticate with HCP Terraform
  - [`tfctl auth status`](/terraform/tfctl-cli/reference/cli/auth/status) - Check authentication status

### Harness Management

- [`tfctl harness`](/terraform/tfctl-cli/reference/cli/harness) - Manage harness installations
  - [`tfctl harness context`](/terraform/tfctl-cli/reference/cli/harness/context) - Display harness context
  - [`tfctl harness install`](/terraform/tfctl-cli/reference/cli/harness/install) - Install harness components

### Profile Configuration

- [`tfctl profile`](/terraform/tfctl-cli/reference/cli/profile) - Manage profile settings
  - [`tfctl profile display`](/terraform/tfctl-cli/reference/cli/profile/display) - Display current profile
  - [`tfctl profile get`](/terraform/tfctl-cli/reference/cli/profile/get) - Get profile value
  - [`tfctl profile set`](/terraform/tfctl-cli/reference/cli/profile/set) - Set profile value
  - [`tfctl profile unset`](/terraform/tfctl-cli/reference/cli/profile/unset) - Unset profile value

### Run Management

- [`tfctl run`](/terraform/tfctl-cli/reference/cli/run) - Manage Terraform runs
  - [`tfctl run start`](/terraform/tfctl-cli/reference/cli/run/start) - Start a new run
  - [`tfctl run status`](/terraform/tfctl-cli/reference/cli/run/status) - Check run status

### Variable Management

- [`tfctl variable`](/terraform/tfctl-cli/reference/cli/variable) - Manage workspace variables
  - [`tfctl variable import`](/terraform/tfctl-cli/reference/cli/variable/import) - Import variables from file

### API Operations

- [`tfctl api`](/terraform/tfctl-cli/reference/cli/api) - Direct API operations
  - [`tfctl api create`](/terraform/tfctl-cli/reference/cli/api/create) - Create API resources
  - [`tfctl api get`](/terraform/tfctl-cli/reference/cli/api/get) - Get API resources

## Global Flags

All tfctl commands support the following global flags:

- `--help`, `-h` - Display help information for the command
- `--version`, `-v` - Display tfctl version information
- `--debug` - Enable debug output
- `--dry-run` - Create a preview of proposed changes without making them
- `--json` - Output results in JSON format
- `--jq=<expression>` - Apply a jq filter expression to JSON output (implies `--json`)
- `--markdown` - Output results in Markdown format
- `--no-color` - Disable color output
- `--profile=<name>` - Specify the profile to use (defaults to current profile)
- `--quiet` - Minimize output, rendering only essential content

## Exit Codes

The tfctl CLI uses the following exit codes:

| Exit Code | Meaning | Solution |
|-----------|---------|----------|
| 0 | Success | — |
| 1 | Usage error | Read `tfctl <cmd> --help` |
| 2 | Not Found or Authorization Error | Verify URL/ID |
| 3 | Authentication Error | Run `tfctl auth login` |
| 4 | Network error | Check connectivity |
| 5 | API Server Error Persists | Try again later |
| 6 | Underlying error detected | Varies depending on error condition |
| 130 | Canceled (Ctrl-C) | — |

## Configuration

The tfctl CLI stores its configuration in the following directories:

- **Linux/MacOS**: `~/.config/tfctl`
- **Windows**: `%AppData%/tfctl`

Configuration for individual profiles is stored in the `profiles` subdirectory. For example, `profiles/default.hcl` stores the configuration for your default profile.

### Environment variables

If you have not configured a particular option for the active profile, tfctl checks the following environment variables:

**Profile Configuration:**
- `TFCTL_ORGANIZATION` - The organization to use for commands that require an organization
- `TFCTL_HOSTNAME` - The Terraform Enterprise or HCP Terraform hostname (defaults to `app.terraform.io`)
- `TFCTL_TOKEN` - An HCP Terraform API token for the default profile
- `TFCTL_TOKEN_<profile>` - An HCP Terraform API token for a named profile
- `TF_TOKEN_<hostname>` - An HCP Terraform API token with hostname in Punycode format (e.g., `TF_TOKEN_app_terraform_io`)

**Behavior Configuration:**
- `TFCTL_CONFIG_DIR` - Change the location of the tfctl config directory (default: `~/.config/tfctl`)
- `TFCTL_SKIP_MIGRATE` - Don't migrate installed skill files to the latest version
- `CHECKPOINT_DISABLE` - Don't check for newer versions of tfctl

## Telemetry

By default, HashiCorp collects anonymous, redacted trace telemetry for each command invocation, including the command name, exit status, network metrics, and basic process information.

You can disable telemetry using any of these methods:

- Set `TFCTL_TELEMETRY` environment variable to `disabled`
- Set `DO_NOT_TRACK` environment variable to `true`
- Configure in your profile: `tfctl profile set telemetry disabled`

To view the telemetry that is transmitted, set profile telemetry to `log`:

```shell-session
$ tfctl profile set telemetry log
```

## Uninstall

To uninstall tfctl:

1. Uninstall shell completions:

   ```shell-session
   $ tfctl --autocomplete-uninstall
   ```

1. Remove the tfctl binary from your system PATH.

1. Optionally, remove the configuration directory:
   - Linux/MacOS: `~/.config/tfctl`
   - Windows: `%AppData%/tfctl`
