content/terraform-tfctl-cli/v0.4.x/docs/tfctl-cli/reference/cli/index.mdx
---
page_title: 'tfctl CLI command reference'
description: >-
  Complete reference documentation for all tfctl CLI commands, including authentication, run management, and API operations.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-07-30T22:07:35.000Z
last_modified: 2026-07-30T22:07:35.000Z
# END AUTO GENERATED METADATA
---

# tfctl CLI command reference

This topic provides an overview of all tfctl CLI commands. Each command reference includes documentation with usage examples, arguments, and options.

## Command Categories

The tfctl command includes subgroups for different operations.

### Top-Level commands

The `create` and `get` commands allow you to create and get HCP Terraform resources by name, including projects and workspaces.

- [`tfctl create`](/terraform/tfctl-cli/reference/cli/create) - Create resources
- [`tfctl get`](/terraform/tfctl-cli/reference/cli/get) - Get or list resources

### Authentication

The `tfctl auth` command group allows you to authenticate tfctl with HCP Terraform or Terraform Enterprise.

- [`tfctl auth`](/terraform/tfctl-cli/reference/cli/auth) - Manage authentication with HCP Terraform
  - [`tfctl auth login`](/terraform/tfctl-cli/reference/cli/auth/login) - Authenticate with HCP Terraform
  - [`tfctl auth status`](/terraform/tfctl-cli/reference/cli/auth/status) - Check authentication status

### Harness management

The `tfctl harness` command group allows you to manage AI agent harness contexts.

- [`tfctl harness`](/terraform/tfctl-cli/reference/cli/harness) - Manage harness installations
  - [`tfctl harness context`](/terraform/tfctl-cli/reference/cli/harness/context) - Display harness context
  - [`tfctl harness exec`](/terraform/tfctl-cli/reference/cli/harness/exec) - Run a child command with session-scoped delete permissions
  - [`tfctl harness install`](/terraform/tfctl-cli/reference/cli/harness/install) - Install harness components

### Profile configuration

The `tfctl profile` command group allows you to manage configuration profiles to support multiple organizations and instances of HCP Terraform and Terraform Enterprise.

- [`tfctl profile`](/terraform/tfctl-cli/reference/cli/profile) - Manage profiles
  - [`tfctl profile display`](/terraform/tfctl-cli/reference/cli/profile/display) - Display current profile
  - [`tfctl profile get`](/terraform/tfctl-cli/reference/cli/profile/get) - Get profile value
  - [`tfctl profile profiles`](/terraform/tfctl-cli/reference/cli/profile/profiles) - Manage configuration profiles
    - [`tfctl profile profiles activate`](/terraform/tfctl-cli/reference/cli/profile/profiles/activate) - Activate a profile
    - [`tfctl profile profiles create`](/terraform/tfctl-cli/reference/cli/profile/profiles/create) - Create a profile
    - [`tfctl profile profiles delete`](/terraform/tfctl-cli/reference/cli/profile/profiles/delete) - Delete a profile
    - [`tfctl profile profiles list`](/terraform/tfctl-cli/reference/cli/profile/profiles/list) - List profiles
    - [`tfctl profile profiles rename`](/terraform/tfctl-cli/reference/cli/profile/profiles/rename) - Rename a profile
  - [`tfctl profile set`](/terraform/tfctl-cli/reference/cli/profile/set) - Set profile value
  - [`tfctl profile unset`](/terraform/tfctl-cli/reference/cli/profile/unset) - Unset profile value

### Run management

The `tfctl run` command group allows you to manage Terraform runs on your workspaces.

- [`tfctl run`](/terraform/tfctl-cli/reference/cli/run) - Manage Terraform runs
  - [`tfctl run start`](/terraform/tfctl-cli/reference/cli/run/start) - Start a new run
  - [`tfctl run status`](/terraform/tfctl-cli/reference/cli/run/status) - Check run status

### Variable management

The `tfctl variable` command group allows you to manage variables in workspaces and variable sets.

- [`tfctl variable`](/terraform/tfctl-cli/reference/cli/variable) - Manage workspace variables
  - [`tfctl variable import`](/terraform/tfctl-cli/reference/cli/variable/import) - Import variables

### API operations

The `tfctl api` command group supports full access to HCP Terraform's API.

- [`tfctl api`](/terraform/tfctl-cli/reference/cli/api) - Direct API operations
  - [`tfctl api schema`](/terraform/tfctl-cli/reference/cli/api/schema) - Search and inspect API operations
    - [`tfctl api schema get`](/terraform/tfctl-cli/reference/cli/api/schema/get) - Show API operation schema
    - [`tfctl api schema search`](/terraform/tfctl-cli/reference/cli/api/schema/search) - Search API operations

## Global flags

All tfctl commands support the following global flags:

- `--help`, `-h` - Display help information for the command
- `--version`, `-v` - Display tfctl version information
- `--debug`: Enable debug output
- `--dry-run`: Create a preview of proposed changes without making them
- `--json`: Output results in JSON format
- `--jq=<EXPRESSION>`: Apply a jq filter expression to JSON output (implies `--json`)
- `--markdown`: Output results in Markdown format
- `--no-color`: Disable color output
- `--no-redact`: Do not mask secret values in output
- `--profile=<NAME>`: Specify the profile to use (defaults to active profile)
- `--quiet`: Minimize output, rendering only essential content

## Pagination

Commands that list resources support pagination options to control how results are returned. This applies to commands like [`tfctl get`](/terraform/tfctl-cli/reference/cli/get) and [`tfctl api`](/terraform/tfctl-cli/reference/cli/api).

### Pagination options

Operations that paginate their output support the following flags:

- `--page-size=NUMBER`: Number of results per page. The default varies by resource type and is determined by the API.
- `--page-number=NUMBER`: Page number to fetch (1-indexed). Defaults to `1`.
- `--all`: Automatically fetch all pages. When using `--all`, the command fetches the first page, follows pagination links in the response, and continues until all pages are retrieved. Limited to 2000 records maximum.

### Behavior

By default, commands return a single page of results with an API-determined page size. Use `--page-size` to control how many records per page, and `--page-number` to fetch a specific page.

When you use the `--all` flag, tfctl fetches all available pages sequentially until it reaches 2000 records or no more results remain, whichever comes first. Note that `--page-size` and `--page-number` are ignored when `--all` is set.

### Examples

List workspaces with custom page size:

```shell-session
$ tfctl get workspaces --page-size 50
```

Fetch a specific page:

```shell-session
$ tfctl get workspaces --page-number 2
```

Automatically fetch all pages:

```shell-session
$ tfctl get workspaces --all
```

## Exit codes

The tfctl CLI uses the following exit codes:

| Exit Code | Meaning | Solution |
|-----------|---------|----------|
| 0 | Success | — |
| 1 | Usage error | Read `tfctl <cmd> --help` |
| 2 | Not Found or Authorization Error | Verify URL/ID |
| 3 | API Authorization Error | Run `tfctl auth login` |
| 4 | Network error | Check connectivity |
| 5 | API Server Error Persists | Try again later |
| 6 | Underlying error detected | Varies depending on error condition (For example, `tfctl auth status` when not authenticated) |
| 130 | Canceled (Ctrl-C) | — |

## Configuration

The tfctl CLI stores its configuration in the following directories:

- **Linux/MacOS**: `~/.config/tfctl`
- **Windows**: `%AppData%/tfctl`

Configuration for individual profiles is stored in the `profiles` subdirectory. For example, `profiles/default.hcl` stores the configuration for your default profile.

### Environment variables

If you have not configured a particular option for the active profile, tfctl checks the following environment variables:

**Profile Configuration**:

- `TFCTL_ORGANIZATION`: The organization to use for commands that require an organization
- `TFCTL_HOSTNAME`: The Terraform Enterprise or HCP Terraform hostname (defaults to `app.terraform.io`)
- `TFCTL_TOKEN`: An HCP Terraform API token for the default profile
- `TFCTL_TOKEN_<profile>`: An HCP Terraform API token for a named profile
- `TF_TOKEN_<hostname>`: An HCP Terraform API token with hostname in Punycode format (e.g., `TF_TOKEN_app_terraform_io`)

**Behavior Configuration**:

- `TFCTL_CONFIG_DIR`: Change the location of the tfctl config directory (default: `~/.config/tfctl`)
- `TFCTL_SKIP_MIGRATE`: Don't migrate installed skill files to the latest version
- `CHECKPOINT_DISABLE`: Don't check for newer versions of tfctl

## Output redaction

Some API responses carry credentials. A created token is returned once in full, and a state version carries signed download URLs that grant access to the state, which contains every value Terraform wrote. tfctl masks these values in all output formats, including `--json` and `--jq`, and reports which fields it masked. Masking applies to the response body only. It is not an access control boundary: the API decides what your token can read, and redaction limits what a permitted response leaves behind in a terminal, a log, or an automated caller.

Set the mode with the redact profile property or the `TFCTL_REDACT` environment variable:

- "strict" (default): masks known secret fields, values the API declares sensitive, and values whose name or shape indicates a credential.

- "known": masks only known secret fields and values the API declares sensitive. Use this mode when a name or shape heuristic hides a value you need.

- "off": disables masking. The `--no-redact` flag does the same for one command.

## Telemetry

By default, HashiCorp collects anonymous, redacted trace telemetry for each command invocation, including the command name, exit status, network metrics, and basic process information.

You can disable telemetry using any of these methods:

- Set `TFCTL_TELEMETRY` environment variable to `disabled`
- Set `DO_NOT_TRACK` environment variable to `true`
- Configure in your profile: `tfctl profile set telemetry disabled`

To view the telemetry that is transmitted, set profile telemetry to `log`:

```shell-session
$ tfctl profile set telemetry log
```
